# armlearn-wrapper

./: .gitignore  CMakeLists.txt  README-LEARNING-TESTS.md  README.md  TrainParam.txt  params.json  sacParams.json  trainParams.json
scripts/: dependencies_installation.sh
src/: ArmLearnWrapper.cpp  ArmLearnWrapper.h  armLearnLogger.cpp  armLearnLogger.h  armLearningAgent.cpp  armLearningAgent.h  armlearnEvaluationResult.cpp  armlearnEvaluationResult.h  graphPruner.cpp  instructions.cpp  instructions.h  main.cpp  mainGrabStandalone.cpp  mainMultipleTraining.cpp  mainSoftActorCritic.cpp  resultTester.cpp  resultTester.h  trainingParameters.cpp  trainingParameters.h
src/softActorCritic/: armSacEngine.cpp  armSacEngine.h  networks.cpp  networks.h  sacParameters.cpp  sacParameters.h  softActorCritic.cpp  softActorCritic.h
